css/styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Custom properties */
:root {
  /* Font family */
  --ff-primary: 'Source Sans Pro', sans-serif;
  --ff-secondary: 'Source Code Pro', monospace;
/* Font weight */
  --fw-reg: 300;
  --fw-bold: 900;
/* Font size */
  --fs-h1: 3rem;
  --fs-h2: 2.25rem;
  --fs-h3: 1.25rem;
  --fs-body: 1rem;
  /* Colors */
  --clr-light: #fff;
  --clr-dark: #004f4f;
  --clr-accent: #66a5a5;
  --clr-accent2: #95bebe;
  --ft-dark: #003636;
  /* Box shadow */
  --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
        0.125em 0.125em 0.25em rgba(0,0,0,.15);
}

/* Font size on smaller screens */
@media (min-width: 800px) {
  :root {
    --fs-h1: 4.5rem;
    --fs-h2: 3.75rem;
    --fs-h3: 1.5rem;
    --fs-body: 1.125rem;
  }
}

/* General styling */
html { scroll-behavior: smooth }

body {
  background: var(--clr-light);
  color: var(--clr-dark);
  margin: 0;
  font-family: var(--ff-primary);
  font-size: var(--fs-body);
  line-height: 1.6;
}

/* Outline on clickable items - buttons, some images */
:focus {
  outline: 3px solid var(--clr-accent);
  outline-offset: 3px;
}

/* Buttons */
.btn {
  display: inline-block;
  padding: .5em 2.5em;
  background: var(--clr-accent);
  color: var(--ft-dark);
  text-decoration: none;
  cursor: pointer;
  font-size: .8rem;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: var(--fw-bold);
  transition: transform 200ms ease-in-out;
}

.btn:hover { transform: scale(1.1) }

.resume-btn {
  margin-top: 1em;;
  position: absolute;
}

/* Typography */
/* Headings */
h1,
h2,
h3 {
  line-height: 1;
  margin: 0;
}

h1 { font-size: var(--fs-h1) }
h2 { font-size: var(--fs-h2) }
h3 { font-size: var(--fs-h3) }

/* Highlighted/emphasised text */
strong { 
  font-weight: var(--fw-bold) 
}

/* Images */ 
img {
  display: block;
  max-width: 100%;
  z-index: 1;
}

/* Styling the scrollbar */
::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: var(--clr-dark); 
}

::-webkit-scrollbar-thumb {
  -webkit-border-radius: 20px;
  border-radius: 20px;
  background: var(--clr-dark); 
  border: 3px solid var(--clr-accent);
}

/* NAVBAR */
nav {
  display: flex;
  width: 100%;
  position: fixed;
  justify-content: space-around;
  /* Centering vertically */
  align-items: center;
  height: 45px;
  background-color: var(--clr-dark);
  z-index: 2;
}

.logo {
  max-width: 2em;
  margin-left: 10px;
  border-radius: 50%;
}

.nav-links {
  display: flex;
  justify-content: space-between;
}

.nav-links a {
  color: var(--clr-light);
  text-decoration: none;
  letter-spacing: 1px;
  font-size: 0.8rem;
}

.nav-links li {  
  list-style-type: none;
}

.burger {
  display: none;
  cursor: pointer;
  margin-right: 15px;
}

.burger div{
  width: 25px;
  height: 3px;
  background-color: var(--clr-accent2);
  margin: 5px;
  transition: all 0.3s ease;
}

/* Hamburger menu on smaller screens */
@media screen and (max-width: 768px) {
  body {
    overflow-x: hidden;
  }

  .nav-links {
    position: absolute;
    right: 0px;    
    height: 98vh; 
    top: 1vh;
    background-color: var(--clr-dark);
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    padding-top: 30px;
    align-items: center;
    width: 50%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
  }

  .logo {  
    z-index: 2;
    position: absolute;
    left: 0;
  }

  .nav-links a {
    font-size: 16px;
    color: var(--clr-accent2);
    font-weight: var(--fw-bold);
  }

  .nav-links li:first-child {
    margin-top: 30px;
  }

  .nav-links li {
    opacity: 0;
    margin-bottom: 80px;
  }

  .burger {
    display: block;
    z-index: 2;
    position: absolute;
    right: 0;
  }
}

.nav-active {
  transform: translateX(0%);
}

/* Nav link animation in the hamburger menu */
@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

.toggle .line1 {
transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
  opacity: 0;
}

.toggle .line3 {
  transform: rotate(45deg) translate(-5px, -6px);
}

/* Nav link animation on big screens */
@media screen and (min-width: 769px) {
  .nav-links {
    display: flex;
    justify-content: flex-end;
    width: 100%;
    margin: 0 auto;
    padding: 1em 1em;
    text-align: center;
  } 

  .nav-links a {
    color: var(--clr-accent2);
    text-decoration: none;
    margin: 0px 10px;
    padding: 10px 10px;
    position: relative;
    z-index: 0;
    cursor: pointer;
    font-weight: var(--fw-bold);
  }
  
  /* Slide right  */
  .nav-links a:before {
    position: absolute;
    width: 2px;
    height: 70%;
    left: 0px;
    top: 6px;
    content: '';
    background: var(--clr-light);
    opacity: 0.3;
    transition: all 0.3s;
  }
  
  .nav-links a:hover:before {
    width: 110%;
  }
}

/* Sections - general */
section {
  padding: 5em 2em;
  z-index: 0;
}

h2 {  
  z-index: -1;
}

/* Titles and subtitles */
.section__title {
  margin-bottom: .25em;
  z-index: 1;
}

.section__subtitle {
  margin: 0;
  font-size: var(--fs-h3);
}

.section__title--intro {
  font-weight: var(--fw-reg);
}

.section__title--intro strong {
  display: block;
}

.section__subtitle--intro,
.section__subtitle--about {
  background: var(--clr-accent);
  padding: .25em 1em;
  font-family: var(--ff-secondary);
  margin-bottom: 1em;
  color: var(--ft-dark);
}


/* INTRO SECTION */
.intro {
  position: relative;
}

.intro__img {
  box-shadow: var(--bs);
}

.section__subtitle--intro {
  display: inline-block;
}

/* For centering titles and images that would otherwise looks unorganized on smaller screens */
@media (max-width: 799px) {
  .intro {    
    margin-left: auto;
    margin-right: auto;
    top: 40px;
    padding: 2em;
    max-width: 100%;  
    align-items: center;    
    text-align: center;
    display: block;
  }

  .section__subtitle--intro,
  .section__subtitle--about {
    padding: .25em;
    text-align: center;
    display: block;
  }

  .intro__img,
  .about-me__img {
    max-width: 80%;    
    margin-left: auto;
    margin-right: auto;
  }

  .intro__img {
    margin-bottom: 2em;
  }

  .section__title {      
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width: 600px) {
  .intro {
    display: grid;
    width: min-content;
    margin: 0 auto;
    grid-column-gap: 1em;
    grid-template-areas:
      "img title"
      "img subtitle";
      grid-template-columns: min-content max-content;
  }

  .intro__img {
    grid-area: img;
    min-width: 250px;
    position: relative;
    z-index: 2;
  }

  .section__subtitle--intro {
    align-self: start;
    grid-column: -1 / 1;
    grid-row: 2;
    text-align: right;
    position: relative;
    left: -1.5em;
    width: calc(100% + 1.5em);
  }
}


/* SERVICES SECTION */
.my-services {
  background-color: var(--clr-dark);
  background-image: url(../img/services-bg.jpg); /* Src: https://unsplash.com/photos/MSN8TFhJ0is */
  background-size: cover;
  background-position: right 35% bottom 45%;
  background-blend-mode: multiply;
  color: var(--clr-light);
  text-align: center;  
}

.section__title--services {
  color: var(--clr-accent2);
  position: relative;
}

.section__title--services::after {
  content: '';
  display: block;
  width: 2em;
  height: 1px;
  margin: 0.5em auto 1em;
  /*background: currentColor;*/  
  background: var(--clr-light);
  opacity: 0.25;
}

.services {
  margin-bottom: 4em;
}

.service {
  max-width: 500px;
  margin: 0 auto;
}

@media (min-width: 800px) {
  .services {
    display: flex;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
  }

  .service + .service {
    margin-left: 4em;
  }
}

/* ABOUT ME SECTION */
.about-me {
  max-width: 1200px;
  margin: 0 auto;
}

.about-me__img {
  box-shadow: var(--bs);
  margin-top: 30px;
}

@media (min-width: 600px) {
  .about-me {
    display: grid;
    grid-template-columns: 1fr 200px;
    grid-template-areas: 
      "title img"
      "subtitle img"
      "text img";
      grid-column-gap: 2em;
  }

  .section__title--about {
    grid-area: title;
  }

  .section__subtitle--about {
    grid-column: 1 / -1;
    grid-row: 2;
    position: relative;
    left: -1em;
    width: calc(100% + 2em);
    padding-left: 1em;
    padding-right: calc(200px + 4em);
  }

  .about-me__img {
    grid-area: img;
    position: relative;
  }
}

/* MY WORK SECTION */
.my-work {
  background-color: var(--clr-dark);
  color: var(--clr-light);
  text-align: center;
}

.section__subtitle--work {
  color: var(--clr-accent2);
  font-weight: var(--fw-bold);
  margin-bottom: 1em;
}

/* Set max-width to 500px and add m queries for small screens! */
.portfolio {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
  justify-content: center;
  /*max-width: 1200px;*/
}

.portfolio__item {
  background: var(--clr-accent);
  overflow: hidden;
}

.portfolio__img {
  transition: 
    transform 750ms cubic-bezier(.5, 0, .5, 1),
    opacity 250ms linear;
}

.portfolio__item:focus {
  position:relative;
  z-index: 2;
}

.portfolio__img:hover,
.portfolio__item:focus .portfolio__img {
  transform: scale(1.2);
  opacity: .5;
}

@media all and (max-width: 300px) {
  .nav-links {
    width: 100%;
  }
}

/* Footer */
.footer {
  background: #111;
  color: var(--clr-accent);
  text-align: center;
  padding: 2.5em 0;
  font-size: var(--fs-h3);
}

.footer a { 
  color: inherit;
  text-decoration: none; 
}

.footer__link {
  font-weight: var(--fw-bold);
}

.footer__link:hover,
.social-list__link:hover {
  opacity: .7;
}

.footer__link:hover {
  text-decoration: underline;  
}

.social-list {
  list-style: none;
  display: flex;
  justify-content: center;
  margin: 2em 0 0;
  padding: 0;
}

.social-list__item {
  margin: 0 .5em;
}

.social-list__link {
  padding: .5em;
}

/* Portfolio projects */
.portfolio-item-individual {
  padding: 0 2em 2em;
  max-width: 1000px;
  margin: 0 auto;
}

.portfolio-item-individual p {
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;
}

.extra-info {
  width: 100%;
  margin: auto;
}

.extra-info ul,
.extra-info ol {
  width: 70%;
  margin: auto;
}

.project-description {
  padding-bottom: 20px;
}

@media screen and (min-width: 601px) and (max-width: 799px) {  
  .project__subtitle  {
    padding-left: 14em;
  }
}

